{HTML}/{CSS} - Fixed: Text alignment with emojis in the plans section - Hover behavior on faqs and buttons

--- a/assets/css/button.css
+++ b/assets/css/button.css
@@ -10,8 +10,8 @@
   display: inline-block;
 }
 
-.button:hover, .button-header:hover{
-  background-color: #3c85ff;
+.button:hover, .button-header:hover, .button-trial:hover, .button-sales-office:hover{
+  opacity: 0.9;
 }
 
 /* 
@@ -58,6 +58,11 @@ MAIN
   color: black;
   text-decoration: none;
 }
+
+.button-partner:hover, .button-clients:hover {
+  background-color: rgb(204, 193, 193);
+}
+
 
 /* 
 /MAIN
